--- a/pug/product1_2.pug
+++ b/pug/product1_2.pug
@@ -65,7 +65,7 @@ body
                         a(href="https://youtu.be/PGiqnDiTnaI" target="_blank") 使用教學
 
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/coming-soon.png", alt="")
+                        img.img-fluid(src="public/images/pd1-2-2.png", alt="")
     footer 
         .container 
             .row 
