--- a/pug/index.pug
+++ b/pug/index.pug
@@ -39,11 +39,13 @@ body
                 li 
                     .date 2022-11-01
                     .product1 產品資訊
-                    .news 裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!
+                    .news 
+                        a(href="product2_3.html") 裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!
                 li 
                     .date 2022-11-01
                     .product1 產品資訊
-                    .news 螺絲小幫手-真豪吸上市囉!
+                    .news 
+                        a(href="product2_4.html") 螺絲小幫手-真豪吸上市囉!
                 li 
                     .date 2022-11-01
                     .product1 產品資訊
@@ -54,7 +56,8 @@ body
             .left.col-12
                 img.img-fluid(src="public/images/product6.png", alt="") 
             .right.col-12
-                h2 真豪洗冷氣清洗槽
+                h2 
+                    a(href="product1_1.html") 真豪洗冷氣清洗槽
                 p 革命性產品
                 p 完全解決溢水的困擾
                 p 組裝快速省去繁雜工時
@@ -64,7 +67,8 @@ body
                 img.img-fluid(src="public/images/knife2.png", alt="")
                 img.logo2-2(src="public/images/LOGO2.png", alt="")
             .right.col-12.order-md-1
-                h2 真豪修邊刀
+                h2 
+                    a(href="product2_1.html") 真豪修邊刀
                 p 方便攜帶
                 p 好操作
                 p 耐用
